--- a/scss/_animation2.scss
+++ b/scss/_animation2.scss
@@ -24,28 +24,11 @@
             position: relative;
             width: 150px;
             height: 150px;
-            transform: rotate(270deg);
-            .dot{
-                position: absolute;
-                inset: 5px;
-                //top bottom left right的簡寫
-                // !!懂了，前面留5px的寬度，就是為了這個
-                z-index: 10;//為了讓它在上方
-                &::before{
-                    content: '';
-                    position: absolute;
-                    width: 10px;
-                    height: 10px;
-                    transform: translateX(-50%);//讓物件的x軸移動-50%
-                    background-color: var(--clr);
-                    border-radius: 50%;
-                    top: -5px; //這裡的會受前面rotate的影響
-                    left: 50%; //這裡的會受前面rotate的影響
-
-                }
-            }
             svg{
                 position: relative;
+                transform: rotate(270deg);
+                width: 150px;
+                height: 150px;
                 circle{
                     width: 100%;
                     height: 100%;
@@ -59,11 +42,81 @@
                         // stroke-dasharray = '10' 虛線長10，間距10，然後重複 虛線長10，間距10
                         // stroke-dasharray = '10, 5'虛線長10，間距5，然後重複 虛線長10，間距5
                         // stroke-dasharray = '20, 10, 5'虛線長20，間距10，虛線長5，接著是間距20，虛線10，間距5，之後開始如此迴圈
-                        stroke-dashoffset: calc(440 - (440 * var(--num))/100)
+                        stroke-dashoffset: calc(440 - (440 * var(--num))/100);
+                        //推多少
+                        //440是circle的總寬度*百分之多少，可以顯示出正確的百分比
+                        opacity: 0;
+                        animation: fadeIn 1s linear forwards;
+                        animation-delay: 2.5s;
+                        @keyframes fadeIn {
+                            0%{
+                                opacity: 0;
+                            }
+                            100%{
+                                opacity: 1;
+                            }
+                        }
+                        //這邊是邊框顯示的動畫
                     }
                 }
             }
+            .dot{
+                position: absolute;
+                inset: 5px;
+                //position top bottom left right的簡寫
+                // !!懂了，前面留5px的寬度，就是為了這個
+                z-index: 10;//為了讓它在上方
+                transform: rotate(calc( 3.6deg * var(--num)));
+                animation: animateDot 2s linear none;
+                @keyframes animateDot {
+                    0%{transform: rotate(0deg);}
+                    100%{transform: rotate(calc(3.6deg*var(--num)));}
+                }
+                &::before{
+                    content: '';
+                    position: absolute;
+
+                    top: -5px; //這裡的會受前面rotate的影響，不是直覺對應top，而是往左5px。
+                    left: 50%; //這裡的會受前面rotate的影響，不是直覺對應top，高度50%。
+                    transform: translateX(-50%);//讓物件的x軸移動-50%，看起來會在線上
+                    width: 10px;
+                    height: 10px;
+                    
+                    border-radius: 50%;
+                    background-color: var(--clr);
+                    box-shadow: 0 0 10px var(--clr);
+                }
+            }
            }
+        }
+        .number{
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            animation: fadeIn 1s linear forwards;
+            animation-delay: 2.5s;
+            h2{
+                color: #fff;
+                font-weight: 700;
+                font-size: 2.5em;
+                span{
+                    font-weight: 300;
+                    color: #fff;
+                    font-size: 0.5em;
+                }
+            }
+            p{
+                font-weight: 300;
+                font-size: 0.75em;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+                color: #fff
+
+            }
+            
         }
     }
 }
