--- a/scss/_animation1.scss
+++ b/scss/_animation1.scss
@@ -1,5 +1,4 @@
 .animation1{
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,13 +23,13 @@
             position: absolute;
             left: 0;
             padding: 11.25px;//
-            pointer-events: none;//
+            pointer-events: none;//不會被點擊到
             font-size: 1em;
             color: rgba(255, 255, 255, 0.25);
             text-transform: uppercase;
             transition: 0.5s
         }
-        input:valid ~ span,input:focus ~ span{//
+        input:valid ~ span,input:focus ~ span{//當input有值/focus狀態 span產生的變化
             color: #00dfc4;
             transform: translateX(15px) translateY(-7px);
             transition: 0.5s;
